--- a/index.html
+++ b/index.html
@@ -8,13 +8,33 @@
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.5.0/d3.min.js" integrity="sha512-0XfwGD1nxplHpehcSVI7lY+m/5L37PNHDt+DOc7aLFckwPXjnjeA1oeNbru7YeI4VLs9i+ADnnHEhP69C9CqTA==" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <div id="vis"></div>
+    <div id="orbit_viewer"></div>
 </body>
 <script>
     document.addEventListener("DOMContentLoaded", e => {
-        vegaEmbed("#vis", "./vegachart1.vg");
+        //vegaEmbed("#vis", "./neo_objects_explore.vg");
+        neoObjects = d3.json("./neo_objects.json").then(data => {
+        d3.select("#orbit_viewer")
+            .append("svg")
+            .attr("width", 400).attr("height", 400).attr("viewBox", "-10 -10 20 20")
+            .selectAll("circle")
+            .data(data.slice(0,10))
+            .enter()
+            .append("ellipse")
+            .attr("cx", 0)
+            .attr("cy", 0)
+            .attr("rx", d => d['q_au_1'])
+            .attr("ry", d => d['q_au_2'])
+            .attr("transform", (d,i) => "rotate(" + d['i_deg'] + ")")
+            .style("stroke","black")
+            .style("stroke-width", "0.1")
+            .style("fill", "none");
     })
+});
 </script>
 </html>
