--- a/test_ass4.html
+++ b/test_ass4.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<head></head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Assignment 4: Trees of Champaign</title>
+  <script src="assignment4.js" type="module"></script>
+</head>
 <body>
 <h1>Trees of Champaign</h1>
 <div id ="panel1">panel 1 should be here</div>
 <div id="panel2">panel 2 should be here</div>
-<script src="assignment4.js" type="module"></script>
 </body>
+</html>
