--- a/test_ass4.html
+++ b/test_ass4.html
@@ -4,15 +4,42 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Assignment 4: Trees of Champaign</title>
+  <script src="https://d3js.org/d3.v6.min.js"></script>
+  <script src="https://papaparse.min.js"></script>
 </head>
 <body>
 <h1>Trees of Champaign</h1>
 <div id ="panel1">panel 1 should be here</div>
 <div id="panel2">panel 2 should be here</div>
 <script>
-  var d3 = import('d3');
-
-  trees = csv("https://gis-cityofchampaign.opendata.arcgis.com/datasets/979bbeefffea408e8f1cb7a397196c64_22.csv?outSR=%7B%22latestWkid%22%3A3857%2C%22wkid%22%3A102100%7D");
+  trees = Papa.parse("https://gis-cityofchampaign.opendata.arcgis.com/datasets/979bbeefffea408e8f1cb7a397196c64_22.csv?outSR=%7B%22latestWkid%22%3A3857%2C%22wkid%22%3A102100%7D",{
+    download: true,
+    delimiter: "",	// auto-detect
+	  newline: "",	// auto-detect
+	  quoteChar: '"',
+	  escapeChar: '"',
+	  header: true,
+	  transformHeader: undefined,
+	  dynamicTyping: true,
+	  preview: 0,
+	  encoding: "",
+  	worker: false,
+	  comments: false,
+	  step: undefined,
+  	complete: undefined,
+  	error: undefined,
+	  downloadRequestHeaders: undefined,
+  	downloadRequestBody: undefined,
+  	skipEmptyLines: false,
+  	chunk: undefined,
+  	chunkSize: undefined,
+	  fastMode: undefined,
+  	beforeFirstChunk: undefined,
+  	withCredentials: undefined,
+  	transform: undefined,
+	  delimitersToGuess: [',', '\t', '|', ';', Papa.RECORD_SEP, Papa.UNIT_SEP]
+  }
+);
 
 function makeTrees() {
   const width = 450;
