--- a/test_ass4.html
+++ b/test_ass4.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Assignment 4: Trees of Champaign</title>
   <script src="https://d3js.org/d3.v6.min.js"></script>
-  <script src="https://papaparse.min.js"></script>
+  <script src="https://unpkg.com/papaparse@latest/papaparse.min.js"></script>
 </head>
 <body>
 <h1>Trees of Champaign</h1>
