--- a/test_ass4.html
+++ b/test_ass4.html
@@ -12,7 +12,7 @@
 <div id ="panel1">panel 1 should be here</div>
 <div id="panel2">panel 2 should be here</div>
 <script>
-  trees = parse("https://gis-cityofchampaign.opendata.arcgis.com/datasets/979bbeefffea408e8f1cb7a397196c64_22.csv?outSR=%7B%22latestWkid%22%3A3857%2C%22wkid%22%3A102100%7D",{
+  trees = Papa.parse("https://gis-cityofchampaign.opendata.arcgis.com/datasets/979bbeefffea408e8f1cb7a397196c64_22.csv?outSR=%7B%22latestWkid%22%3A3857%2C%22wkid%22%3A102100%7D",{
     download: true,
     delimiter: "",	// auto-detect
 	  newline: "",	// auto-detect
