--- a/test_ass4.html
+++ b/test_ass4.html
@@ -44,7 +44,7 @@
 function makeTrees() {
   const width = 450;
   const height = 450;
-  const svg = create("svg")
+  const svg = d3.create("svg")
    .attr("width", width)
    .attr("height", height)
    .attr("viewBox", [0,0,1,1])
@@ -67,7 +67,7 @@ function makeTrees() {
   const {svg, xScale, yScale} = makeTrees();
   const leftPanel = select("#panel1");
   const secondPanel = select("#panel2");
-  const quadTree = quadtree()
+  const quadTree = d3.quadtree()
     .x( d => xScale(d.X)) //get x points
     .y(d=> yScale(d.Y)) //get y points
     .addAll(trees);
