--- a/test_ass4.html
+++ b/test_ass4.html
@@ -38,8 +38,7 @@
   	withCredentials: undefined,
   	transform: undefined,
 	  delimitersToGuess: [',', '\t', '|', ';', Papa.RECORD_SEP, Papa.UNIT_SEP]
-  }
-);
+  });
 
 function makeTrees() {
   const width = 450;
@@ -49,8 +48,8 @@ function makeTrees() {
    .attr("height", height)
    .attr("viewBox", [0,0,1,1])
    .style("border", "solid 1px black");
-  const xScale = d3.scaleLinear().domain(d3.extent(trees.X)).range([0,1]);
-  const yScale = d3.scaleLinear().domain(d3.extent(trees.Y)).range([1,0]);
+  const xScale = d3.scaleLinear().domain(d3.extent(trees, d=> d.X)).range([0,1]);
+  const yScale = d3.scaleLinear().domain(d3.extent(trees, d=> d.Y)).range([1,0]);
    svg.append("g")
     .attr("id", "trees")
     .selectAll("circle")
