--- a/test_ass4.html
+++ b/test_ass4.html
@@ -48,6 +48,7 @@ function makeTrees() {
    .attr("height", height)
    .attr("viewBox", [0,0,1,1])
    .style("border", "solid 1px black");
+  console.log(trees);
   const xScale = d3.scaleLinear().domain(d3.extent(trees, d => d.X)).range([0,1]);
   const yScale = d3.scaleLinear().domain(d3.extent(trees, d => d.Y)).range([1,0]);
    svg.append("g")
