--- a/test_ass4.html
+++ b/test_ass4.html
@@ -20,10 +20,40 @@ function papaErrorCallback(error, file) {
 
 function papaCompleteCallback(results, file) {
   console.log("Parsing complete. Results: ", results, file);
+
+  const width = 450;
+  const height = 450;
+  const svg = d3.create("svg")
+   .attr("width", width)
+   .attr("height", height)
+   .attr("viewBox", [0,0,1,1])
+   .style("border", "solid 1px black");
+  const xScale = d3.scaleLinear().domain(d3.extent(results, d => d.X)).range([0,1]);
+  const yScale = d3.scaleLinear().domain(d3.extent(results, d => d.Y)).range([1,0]);
+   svg.append("g")
+    .attr("id", "trees")
+    .selectAll("circle")
+    .data(trees)
+    .enter()
+    .append("circle")
+    .attr("cx", d => xScale(d.X))
+    .attr("cy", d => yScale(d.Y))
+    .attr("r", 0.001);
+
+  const leftPanel = select("#panel1");
+  const secondPanel = select("#panel2");
+  const quadTree = d3.quadtree()
+    .x( d => xScale(d.X)) //get x points
+    .y(d=> yScale(d.Y)) //get y points
+    .addAll(results);
+  svg.on("mousemove", (e,d) => {
+    var node = quadTree.find(e.offsetX, e.offsetY)
+          secondPanel.text("this is a tree on " + `${node.STREET}`);
+    });
 }
 
 function makeTrees() {
-  var trees = Papa.parse("https://gis-cityofchampaign.opendata.arcgis.com/datasets/979bbeefffea408e8f1cb7a397196c64_22.csv",{
+  Papa.parse("https://gis-cityofchampaign.opendata.arcgis.com/datasets/979bbeefffea408e8f1cb7a397196c64_22.csv",{
     download: true,
     delimiter: "",	// auto-detect
 	  newline: "",	// auto-detect
@@ -50,40 +80,14 @@ function makeTrees() {
   	transform: undefined,
 	  delimitersToGuess: [',', '\t', '|', ';', Papa.RECORD_SEP, Papa.UNIT_SEP]
   });
-  const width = 450;
-  const height = 450;
-  const svg = d3.create("svg")
-   .attr("width", width)
-   .attr("height", height)
-   .attr("viewBox", [0,0,1,1])
-   .style("border", "solid 1px black");
-  const xScale = d3.scaleLinear().domain(d3.extent(trees, d => d.X)).range([0,1]);
-  const yScale = d3.scaleLinear().domain(d3.extent(trees, d => d.Y)).range([1,0]);
-   svg.append("g")
-    .attr("id", "trees")
-    .selectAll("circle")
-    .data(trees)
-    .enter()
-    .append("circle")
-    .attr("cx", d => xScale(d.X))
-    .attr("cy", d => yScale(d.Y))
-    .attr("r", 0.001);
-  return {svg: svg, xScale: xScale, yScale: yScale};
+  
+ // return {svg: svg, xScale: xScale, yScale: yScale};
 }
 
-{
-  const {svg, xScale, yScale} = makeTrees();
-  const leftPanel = select("#panel1");
-  const secondPanel = select("#panel2");
-  const quadTree = d3.quadtree()
-    .x( d => xScale(d.X)) //get x points
-    .y(d=> yScale(d.Y)) //get y points
-    .addAll(trees);
-  svg.on("mousemove", (e,d) => {
-    var node = quadTree.find(e.offsetX, e.offsetY)
-         secondPanel.text("this is a tree on " + `${node.STREET}`);
-    });
-}
+
+makeTrees();
+
+
 </script>
 </body>
 </html>
