--- a/assignment4_testing.html
+++ b/assignment4_testing.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="./inspector.css">
 <body>
     <h1>Trees of Champaign</h1>
-    <h2>Brenna Levitin</h2><br />IS 545<br />Assignment 4<br />April 4, 2021<br />
+    <h2>Brenna Levitin</h2><br /><b>IS 545<br />Assignment 4<br />April 4, 2021<br /></b>
 <script type="module">
 
 import define from "./index.js";
