--- a/assignment4_final.html
+++ b/assignment4_final.html
@@ -3,7 +3,7 @@
 <title>Trees of Champaign</title>
 <link rel="stylesheet" type="text/css" href="./inspector.css">
 <body>
-</body>
+  <b>quick testing.</b>
 <script type="module">
 
 import define from "./index.js";
@@ -13,3 +13,4 @@ const runtime = new Runtime();
 const main = runtime.module(define, Inspector.into(document.body));
 
 </script>
+</body>
